--- a/.openapi/src/components/responses/204NoContent.yml
+++ b/.openapi/src/components/responses/204NoContent.yml
@@ -9,7 +9,7 @@ content:
               type: object
           required:
             - data
-        - $ref: "../schemas/common/Response.yaml"
+        - $ref: "#/components/schemas/commonResponse"
     examples:
       success:
         value:
