--- a/.openapi/src/components/responses/401Unauthorized.yml
+++ b/.openapi/src/components/responses/401Unauthorized.yml
@@ -9,13 +9,13 @@ content:
               type: object
           required:
             - data
-        - $ref: "../schemas/common/Response.yaml"
+        - $ref: "#/components/schemas/commonResponse"
     examples:
       Unauthorized:
         value:
           data:
             errors:
-              name: 指名は必須です
+              email: emailは必須です
               password: パスワードは必須です
           status: 401
           message: Unauthorized error.
