--- a/.openapi/src/components/responses/503ServiceUnavailable.yml
+++ b/.openapi/src/components/responses/503ServiceUnavailable.yml
@@ -7,7 +7,7 @@ content:
           properties:
             data:
               type: object
-        - $ref: "../schemas/common/Response.yaml"
+        - $ref: "#/components/schemas/commonResponse"
     examples:
       Server error:
         value:
