--- a/.openapi/src/components/schemas/player/player.yml
+++ b/.openapi/src/components/schemas/player/player.yml
@@ -1,12 +1,11 @@
-title: Player
+title: player
 type: object
 description: 選手情報
 properties:
   id:
-    type: integer
-    format: int64
-    description: player_id
-    readOnly: true
+    $ref: "#/components/schemas/playerId"
+  sport_category_id:
+    $ref: "#/components/schemas/sportCategoryId"
   name_en:
     type: string
     description: 選手名
