redoclyのカスタムルール追加

--- a/.openapi/src/components/responses/500InternalServerError.yml
+++ b/.openapi/src/components/responses/500InternalServerError.yml
@@ -3,11 +3,11 @@ content:
   application/json:
     schema:
       allOf:
+        - $ref: "#/components/schemas/commonResponse"
         - type: object
           properties:
             data:
-              type: object
-        - $ref: "#/components/schemas/commonResponse"
+              type: objec
     examples:
       Server error:
         value:
