--- a/.openapi/src/components/responses/201DataCreated.yml
+++ b/.openapi/src/components/responses/201DataCreated.yml
@@ -3,16 +3,16 @@ content:
   application/json:
     schema:
       allOf:
+        - $ref: "#/components/schemas/commonResponse"
         - type: object
           properties:
             data:
               type: object
           required:
             - data
-        - $ref: "#/components/schemas/commonResponse"
     examples:
       success:
         value:
           data: {}
           status: 201
-          message: success
+          message: created
