TennisPlayersにメソッド追加

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,5 +36,16 @@
     "paths": {
       "@/*": ["src/*"]
     }
-  }
+  },
+
+  "phpunit.command": "docker exec -it tennis-track_app /bin/sh -c",
+  "phpunit.php": "php",
+  "phpunit.phpunit": "vendor/bin/phpunit",
+  "phpunit.args": [
+      "-c",
+      "phpunit.xml"
+  ],
+  "phpunit.paths": {
+      "${workspaceFolder}": "/var/www",
+  },
 }
