--- a/.openapi/src/paths/v1/user/auth/me.yml
+++ b/.openapi/src/paths/v1/user/auth/me.yml
@@ -18,6 +18,12 @@ get:
               - $ref: "#/components/schemas/commonResponse"
               - type: object
                 properties:
+                  message:
+                    type: string
+                    const: success
+                  status:
+                    type: integer
+                    const: 200
                   data:
                     $ref: "#/components/schemas/user"
     401:
