--- a/.openapi/src/v1.yml
+++ b/.openapi/src/v1.yml
@@ -46,10 +46,7 @@ paths:
 components:
   securitySchemes:
     BearerAuth:
-      type: http
-      scheme: bearer
-      bearerFormat: JWT
-      description: Bearerトークンを使用した認証
+      $ref: "./components/securitySchemes/bearerAuth.yml"
 
   schemas:
     commonResponse:
