--- a/.openapi/src/paths/v1/user/auth/forgotPassword.yml
+++ b/.openapi/src/paths/v1/user/auth/forgotPassword.yml
@@ -41,3 +41,5 @@ post:
       $ref: "#/components/responses/422InvalidRequest"
     500:
       $ref: "#/components/responses/500InternalServerError"
+    503:
+      $ref: "#/components/responses/503ServiceUnavailable"
