--- a/.openapi/src/components/responses/503ServiceUnavailable.yml
+++ b/.openapi/src/components/responses/503ServiceUnavailable.yml
@@ -1,16 +1,5 @@
-description: 一時的にサービス提供ができない場合。（メンテナンス等）
+description: 一時的にサービス提供ができない場合（メンテナンス等）
 content:
   application/json:
     schema:
-      allOf:
-        - $ref: "#/components/schemas/commonResponse"
-        - type: object
-          properties:
-            data:
-              type: object
-    examples:
-      Server error:
-        value:
-          data: {}
-          status: 503
-          message: Server Unavailable. Contact your server administrator.
+      $ref: "#/components/schemas/commonServiceUnavailableResponse"
