--- a/.openapi/src/paths/v1/user/auth/me.yml
+++ b/.openapi/src/paths/v1/user/auth/me.yml
@@ -28,3 +28,5 @@ get:
       $ref: "#/components/responses/422InvalidRequest"
     500:
       $ref: "#/components/responses/500InternalServerError"
+    503:
+      $ref: "#/components/responses/503ServiceUnavailable"
