--- a/.openapi/src/paths/v1/user/auth/resetPassword.yml
+++ b/.openapi/src/paths/v1/user/auth/resetPassword.yml
@@ -47,3 +47,5 @@ post:
       $ref: "#/components/responses/422InvalidRequest"
     500:
       $ref: "#/components/responses/500InternalServerError"
+    503:
+      $ref: "#/components/responses/503ServiceUnavailable"
