fix: openapiのディレクトリ構成修正

--- a/.openapi/src/paths/v1/users/favorites/players/[playerId].yml
+++ b/.openapi/src/paths/v1/users/favorites/players/[playerId].yml
@@ -9,7 +9,7 @@ post:
   parameters:
     - $ref: "#/components/schemas/userAgent"
     - schema:
-        type: integer
+        $ref: "#/components/schemas/playerId"
       in: query
       name: player_id
       description: 選手ID
