--- a/.github/workflows/backend-testing.yml
+++ b/.github/workflows/backend-testing.yml
@@ -18,7 +18,6 @@ concurrency:
 jobs:
   backend-testing:
     runs-on: ubuntu-latest
-    # docker compose用の環境変数
     env:
       PROJECT_NAME: "tennis-track"
       SOURCE_DIR_NAME: "backend"
@@ -69,6 +68,10 @@ jobs:
         id: docker-build
         if: steps.cache-docker.outputs.cache-hit != 'true'
         run: docker compose build
+
+      # TODO: 後で削除
+      - name: Debug Docker Images
+        run: docker images
 
       - name: Docker Image Save
         id: docker-tag-save
