--- a/.github/workflows/backend-testing.yml
+++ b/.github/workflows/backend-testing.yml
@@ -69,6 +69,10 @@ jobs:
         if: steps.cache-docker.outputs.cache-hit != 'true'
         run: docker compose build
 
+      # TODO: 後で削除
+      - name: Debug Docker Images
+        run: docker images
+
       - name: Docker Image Save
         id: docker-tag-save
         if: steps.cache-docker.outputs.cache-hit != 'true'
@@ -86,6 +90,9 @@ jobs:
       - name: Docker Compose Up
         run: docker compose up -d
 
+      - name: Docker Compose Process
+        run: docker compose ps -a
+
       - name: Composer Install
         if: steps.cache-composer.outputs.cache-hit != 'true'
         run: docker compose exec -T app composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
@@ -102,6 +109,9 @@ jobs:
           docker compose exec -T app php artisan key:generate
           docker compose exec -T app php artisan optimize
           docker compose exec -T app chmod -R 777 storage bootstrap/cache
+
+      - name: Laravel Version
+        run: docker compose exec -T app php artisan --version
 
       - name: Excute Migrate
         run: docker compose exec -T app php artisan migrate
