--- a/.github/workflows/backend-testing.yml
+++ b/.github/workflows/backend-testing.yml
@@ -28,7 +28,7 @@ jobs:
       REDIS_HOST_PORT: 6379
       MINIO_HOST_PORT1: 9999
       MINIO_HOST_PORT2: 9001
-      MYSQL_DB_NAME: "tennis-track_db"
+      MYSQL_DB_NAME: "tennis-track_db_testing"
       MYSQL_USER_NAME: "tennis-track_user"
       MYSQL_PASSWORD: "password"
       MYSQL_ROOT_PASSWORD: "password"
