--- a/.github/workflows/backend-testing.yml
+++ b/.github/workflows/backend-testing.yml
@@ -99,17 +99,12 @@ jobs:
       - name: Laravel Settings
         run: |
           docker compose exec -T app cp .env.testing .env
+          docker compose exec -T app php artisan config:clear
           docker compose exec -T app php artisan optimize
           docker compose exec -T app chmod -R 777 storage bootstrap/cache
 
       - name: Excute Migrate
         run: docker compose exec -T app php artisan migrate
-
-      - name: Rollback Testing
-        run: docker compose exec -T app php artisan migrate:refresh
-
-      - name: Seeding Testing
-        run: docker compose exec -T app php artisan db:seed
 
       - name: PHP Testing
         run: docker compose exec -T app ./vendor/bin/phpunit
