--- a/.github/workflows/backend-testing.yml
+++ b/.github/workflows/backend-testing.yml
@@ -10,7 +10,6 @@ on:
       - '.docker/**'
       - '.github/workflows/**'
 
-# 連続してpushすると一つ前の実行中のjobが停止される設定
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
@@ -35,26 +34,61 @@ jobs:
 
       IMAGE_CACHE_DIR: /tmp/docker-img
       IMAGE_CACHE_KEY: cache-docker-image
-      CACHE_VER: 2 # キャッシュをクリアしたい時は数値に＋1する
+      CACHE_VER: 2 # キャッシュクリア時は数字アップ
 
-      # dockerhubの既存imageのものはそのまま使う
-      # 自作のimageはdocker-compose.yamlのservice名と同じにする
       APP_IMAGE_TAG: tennis-track-app
       NGINX_IMAGE_TAG: tennis-track-nginx
       MYSQL_IMAGE_TAG: tennis-track-db
-      # QUEUE_WORKER_IMAGE_TAG: tennis-track_queue_worker
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Cache Docker Layers
-        id: cache-docker
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Cache Docker Buildx layers
         uses: actions/cache@v3
         with:
-          path: ${{ env.IMAGE_CACHE_DIR }}
-          key: ${{ runner.os }}-${{ env.IMAGE_CACHE_KEY }}-${{ env.CACHE_VER }}-${{ hashFiles('docker-compose.yaml') }}
-          restore-keys: ${{ runner.os }}-${{ env.IMAGE_CACHE_KEY }}-${{ env.CACHE_VER }}-
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ env.CACHE_VER }}-${{ hashFiles('docker-compose.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-${{ env.CACHE_VER }}-
+
+      - name: Build nginx image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./.docker/nginx
+          file: ./.docker/nginx/Dockerfile
+          tags: ${{ env.NGINX_IMAGE_TAG }}:latest
+          load: true
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new
+
+      - name: Build app image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./.docker/php
+          file: ./.docker/php/Dockerfile
+          tags: ${{ env.APP_IMAGE_TAG }}:latest
+          load: true
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new
+
+      - name: Build db image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./.docker/db
+          file: ./.docker/db/Dockerfile
+          tags: ${{ env.MYSQL_IMAGE_TAG }}:latest
+          load: true
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new
+
+      - name: Replace old buildx cache
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
 
       - name: Cache Composer Dependencies
         id: cache-composer
@@ -63,25 +97,6 @@ jobs:
           path: ./backend/vendor
           key: ${{ runner.os }}-composer-cache-${{ env.CACHE_VER }}-${{ hashFiles('backend/composer.lock') }}
           restore-keys: ${{ runner.os }}-composer-${{ env.CACHE_VER }}-
-
-      - name: Docker Compose Build
-        id: docker-build
-        if: steps.cache-docker.outputs.cache-hit != 'true'
-        run: docker compose build
-
-      - name: Docker Image Save
-        id: docker-tag-save
-        if: steps.cache-docker.outputs.cache-hit != 'true'
-        run: |
-          mkdir -p ${{ env.IMAGE_CACHE_DIR }}
-          docker image save -o ${{ env.IMAGE_CACHE_DIR }}/tennis-track_app.tar ${{ env.APP_IMAGE_TAG }}
-          docker image save -o ${{ env.IMAGE_CACHE_DIR }}/tennis-track_db.tar ${{ env.MYSQL_IMAGE_TAG }}
-          docker image save -o ${{ env.IMAGE_CACHE_DIR }}/tennis-track_nginx.tar ${{ env.NGINX_IMAGE_TAG }}
-
-      - name: Docker Load
-        id: docker-load
-        if: steps.cache-docker.outputs.cache-hit == 'true'
-        run: ls  -1 ${IMAGE_CACHE_DIR}/*.tar | xargs -L 1 docker load -i
 
       - name: Docker Compose Up
         run: docker compose up -d
@@ -103,7 +118,7 @@ jobs:
           docker compose exec -T app php artisan optimize
           docker compose exec -T app chmod -R 777 storage bootstrap/cache
 
-      - name: Excute Migrate
+      - name: Execute Migrate
         run: docker compose exec -T app php artisan migrate
 
       - name: PHP Testing
