--- a/backend/.env.testing
+++ b/backend/.env.testing
@@ -65,3 +65,6 @@ MIHON_LOGIN_ID=""
 
 SPORT_RADAR_API_ENDPOINT_BASE="https://api.sportradar.com"
 SPORT_RADAR_API_KEY=""
+
+BASIC_AUTH_USER=testuser
+BASIC_AUTH_PASS=testpass
