--- a/.github/workflows/backend-testing.yml
+++ b/.github/workflows/backend-testing.yml
@@ -8,7 +8,7 @@ on:
     paths:
       - 'backend/**'
       - '.docker/**'
-      - '.github/workflows/**'
+      - '.github/workflows/backend-testing.yml'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
