--- a/.github/workflows/frontend-testing.yml
+++ b/.github/workflows/frontend-testing.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     paths:
       - 'frontend/**'
-      - '.github/workflows/**'
+      - '.github/workflows/frontend-testing.yml'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
